// `Removed` for deprecated features removed in this release.
// `Fixed` for any bug fixes.
// `Security` to invite users to upgrade in case of vulnerabilities.

v1.10.0 (unreleased)
--------------------

Added
~~~~~

- New `colors.webpage.force_dark_color_scheme` setting which allows forcing
  `prefer-color-scheme: dark` colors for websites (QtWebEngine with Qt 5.14 or
  newer).

Changed
~~~~~~~

- The `fonts.monospace` setting has been removed and replaced by
  `fonts.default_family`. The new `default_family` setting is improved in
  various ways:
  * It accepts a list of font families (or a single font family) rather than a
    comma-separated string. As an example, instead of
    `fonts.monospace = "Courier, Monaco"`, use
    `fonts.default_family = ["Courier", "Monaco"]`.
  * Since a list is now accepted as value, no quoting of font names with spaces
    is required anymore. As an example, instead of
    `fonts.monospace = '"xos4 Terminus"'`, use
    `fonts.default_family = 'xos4 Terminus'`.
  * It is now empty by default rather than having a long list of font names in
    the default config. When the value is empty, the system's default
    monospaced font is used.
- If `monospace` is now used in a font value, it's used literally and not
  replaced anymore. Instead, `default_family` is replaced as explained above.
- The `tox -e mkvenv` (or `mkvenv-pypi`) way of installing qutebrowser is now
  replaced by a `mkvenv.py` script. See the updated
  link:install{outfilesuffix}#tox[install instructions] for details.

Fixed
~~~~~

- When quitting qutebrowser, components are now cleaned up differently. This
  should fix certain (rare) segmentation faults and exceptions when quitting,
  especially with the new exit scheme introduced in in PyQt5 5.13.1.

v1.9.0 (2020-01-08)
-------------------

Added
~~~~~

- Initial support for Qt 5.14.
- New `content.site_specific_quirks` setting which enables workarounds for